- Fixed bug with top navigation bar contents spilling out
  - Fixed bug with extra space ontop of offCanvasModal when scrolling down on it    or scrolling down on it when user is not at the top of the page or device screen

  - Adjusted box shadow of setting a route button to be darker so it is on a higher level than the modal

--- a/src/public/scss/partials/_buttons.scss
+++ b/src/public/scss/partials/_buttons.scss
@@ -142,7 +142,7 @@ input[type="submit"] {
 .btn--fixedAction {
     @extend %circle; 
     @extend %fixed; 
-    @extend %dropshadow; 
+    @extend %dropshadow--topLayer; 
     border: 2px solid #fff; 
     width: rem-calc(58);
     height: rem-calc(58); 
