--- a/src/public/scss/partials/_navs.scss
+++ b/src/public/scss/partials/_navs.scss
@@ -114,6 +114,10 @@ body
     background-color: #fff;
 }
 
+.topBar-stripe {
+z-index: 10;
+}
+
 .dropShadow {
     @include box-shadow(0 1px 2px rgba(0, 0, 0, .2));
 }
